src/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-openrefine
spec:
  ports:
  - port: 3333
    targetPort: 3333
  selector:
    app: openrefine
  type: LoadBalancer
